Fix caption spacing

--- a/css/_main.less
+++ b/css/_main.less
@@ -328,7 +328,7 @@ ul.colour-palette {
 
 /* Email signature */
 .content .email-signature {
-  margin:0 0 10px;
+  margin:0 0 18px;
   padding: 20px;
   width: 468px;
   border: 1px solid @tint-10;
